--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 # Este arquivo .gitignore foi criado automaticamente pelo Microsoft(R) Visual Studio.
 ################################################################################
 
-/DotNET/C#/C#_Fundamentos-TP1-Kaique_Gomes_Viana/mathAdicao/bin/Debug/netcoreapp3.1
+bin
+
+obj
